fix(search): 🐛 typeahead thumbnails should be center-aligned

--- a/resources/skins.citizen.search/skins.citizen.search.less
+++ b/resources/skins.citizen.search/skins.citizen.search.less
@@ -38,6 +38,7 @@
 			&__thumbnail {
 				margin-right: var( --space-sm );
 				background-color: #eaecf0;
+				background-position: center;
 				background-size: cover;
 
 				&.citizen-ui-icon {
